tests/jtrrouter/errors/sinks/deprecated__multiple_sinks/errors.jtrrouter
Error: The edge 'end;left2end;right2end' declared as a sink is not known.
Quitting (on error).
